--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="cat">
-    <img src="motion/m-10.png" class="attachment-large size-large" alt="" id="catpic" loading="lazy"
+    <img src="motion/m-10.png" class="cat-img" alt="" id="catpic" loading="lazy"
          srcset="motion/m-10.png" sizes="(max-width: 254px) 100vw, 254px">
 </div>
 
